# oarphkit

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  bootstrap.py
cloud/: Dockerfile
cmake/Modules/: FindCapnProto.cmake
flix/: README.md  oarphsay.pbtxt  shell.pbtxt
flix/ok/fli/Runtime/: FLiX.cpp
oarphkit/ok/: BranchPredict.hpp  Common.hpp  Config.hpp  Demangle.cpp  Demangle.hpp  IArray-detail.hpp  IArray-inl.hpp  IArray.hpp  OKAssert.hpp  OKLog.hpp  StringUtils.hpp  Stringify-inl.hpp  Stringify.hpp  TemplateFu.hpp  config.h.in
oarphkit/ok/SV/: README.md  SVBase.cpp  SVBase.hpp  SVCommon-inl.hpp  SVCommon.hpp  SVMap.cpp  SVMap.hpp  SVStruct.cpp  SVStruct.hpp
oarphkit/ok/SerializationUtils/: CPUtils-inl.hpp  CPUtils.hpp  IByteArrayable.hpp  IPBSerializable.hpp  PBUtils-inl.hpp  PBUtils.hpp
oarphkit/ok/SerializationUtils/DynamicProto/: DynamicProtoUtils-inl.hpp  DynamicProtoUtils-nopb.hpp  DynamicProtoUtils.cpp  DynamicProtoUtils.hpp  README.md
oarphkit/ok/fli/: FLiConfig.hpp  README.md  Session.hpp
oarphkit/ok/fli/Core/: Core.hpp  README.md  TPtr.hpp
oarphkit/ok/fli/Core/Functors/: FuncWrapper.hpp  Sink.hpp  Source.hpp  Subroutine.hpp  Transform.hpp  Visitor.hpp
oarphkit/ok/fli/Runtime/: EnvFunctorEntryWrapper.cpp  EnvFunctorEntryWrapper.hpp  FuncAttrs.cpp  FuncAttrs.hpp  README.md  Registry.cpp  Registry.hpp  Session.cpp  Session.hpp  env-inl.hpp  env.cpp  env.hpp
oarphkit/ok/fli/Utils/: EnvAnonCounter.hpp
oarphkit/ok/fli/Utils/Serialization/: PBEncodingUtils.hpp
oarphkit/ok/fli/fsl/: Composition-inl.hpp  Composition.cpp  Composition.hpp  FSLRegistry.cpp  FSLRegistry.hpp  FSLShell.cpp  FSLShell.hpp  Hash.hpp  OarphSay.cpp  OarphSay.hpp  README.md  Range.cpp  Range.hpp  StdinSource.hpp  StdoutSink.hpp  Stream.cpp  Stream.hpp  While.cpp  While.hpp
oarphkit/ok/fli/fsl/FSLShellCommands/: Exit.hpp  Help.hpp  SetBreak.hpp  StandardCommands.cpp  StandardCommands.hpp
oarphkit/ok/fli/fsl/FSLShellCommands/EnvCommands/: ExecSpecFromPath.cpp  ExecSpecFromPath.hpp  ExecSpecRaw.cpp  ExecSpecRaw.hpp  Print.hpp  RunMain.hpp  SavePBBin.cpp  SavePBBin.hpp  SaveTxt.cpp  SaveTxt.hpp
oarphkit/ok_msg/: DynamicProto.pb.cc  DynamicProto.pb.h  DynamicProto.proto  FLiSpec.capnp  FLiSpec.capnp.c++  FLiSpec.capnp.h  FLiSpec.pb.cc  FLiSpec.pb.h  FLiSpec.proto  SVMapData.capnp  SVMapData.capnp.c++  SVMapData.capnp.h  SVMapData.pb.cc  SVMapData.pb.h  SVMapData.proto
oarphkit_test/ok/: DemangleTest.cpp  IArrayTest.cpp  OKAssertTest.cpp  OKLogTest.cpp  StringUtilsTest.cpp  StringifyTest.cpp
oarphkit_test/ok/SV/: SVMapTest.cpp  SVPBSerializationTest.cpp  SVStructTest.cpp
oarphkit_test/ok/SerializationUtils/: CPUtilsTest.cpp  IPBSerializableTest.cpp  PBUtilsTest.cpp
oarphkit_test/ok/SerializationUtils/DynamicProto/: DynamicProtoUtilsTest.cpp
oarphkit_test/ok/fli/Core/: CoreTest.cpp  TPtrTest.cpp
oarphkit_test/ok/fli/Core/Functors/: FuncWrapperTest.cpp  SinkTest.cpp  SourceTest.cpp  SubroutineTest.cpp  TransformTest.cpp  VisitorTest.cpp
oarphkit_test/ok/fli/Runtime/: EnvFunctorEntryWrapperTest.cpp  RegistryTest.cpp  SessionTest.cpp  envTest.cpp
oarphkit_test/ok/fli/fsl/: CompositionTest.cpp  FSLRegistryTest.cpp  OarphSayTest.cpp  RangeTest.cpp  StreamTest.cpp  WhileTest.cpp
oarphkit_test/ok_test/: OKAssertCheckThrows.hpp  OKTAssertions.hpp  PBTestUtils.hpp  SStreamSingleton.hpp  SVMapPBTest.proto  TestMessage.capnp  TestMessage.proto
oarphkit_test/ok_test/fli/: OKFliUtils.hpp
oarphkit_test/ok_test_msg/: SVMapPBTest.pb.cc  SVMapPBTest.pb.h  TestMessage.capnp.c++  TestMessage.capnp.h  TestMessage.pb.cc  TestMessage.pb.h
